--- a/app/st/src/index.scss
+++ b/app/st/src/index.scss
@@ -208,6 +208,12 @@ body {
 		font-weight: 700;
 		font-size: 13px;
 	}
+  .gt {
+    color: red;
+  }
+  .lt {
+    color: green;
+  }
 }
 
 .st-current {
