--- a/app/st/src/index.scss
+++ b/app/st/src/index.scss
@@ -52,7 +52,7 @@ body {
 	color: #4d63bc;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-between;
 	position: absolute;
 	align-items: center;
 	top: 0;
